Tasks and templates

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,1 +1,10 @@
 ---
+- name: configure ~/.ssh/id_rsa
+  template:
+    src: id_rsa.j2
+    dest: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
+
+- name: configure ~/.ssh/id_rsa.pub
+  template:
+    src: id_rsa.pub.j2
+    dest: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa.pub"
