--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,7 +1,7 @@
 - name: Configure SSH private key - {{ key.name }}
   template:
     src: id_rsa.j2
-    dest: "{{ lookup('env', 'HOME') }}/.ssh/{{ key.name }}"
+    dest: "{{ ansible_env.HOME }}/.ssh/{{ key.name }}"
     mode: 0600
   vars:
     ssh_rsa_private_key: "{{ key.private }}"
@@ -9,7 +9,7 @@
 - name: Configure SSH public key - {{ key.name }}
   template:
     src: id_rsa.pub.j2
-    dest: "{{ lookup('env', 'HOME') }}/.ssh/{{ key.name }}.pub"
+    dest: "{{ ansible_env.HOME }}/.ssh/{{ key.name }}.pub"
     mode: 0644
   vars:
     ssh_rsa_public_key: "{{ key.public }}"
