Use loop control to set the loop variable. This technique avoids having the variable 'item' defined, meaning that simple loops can be used in the included task without warnings.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,5 +7,7 @@
     mode: 0700
 
 - name: Configure SSH keys
-  include_tasks: install.yml key={{ item }}
+  include_tasks: install.yml
+  loop_control:
+    loop_var: key
   with_items: "{{ ssh_keys }}"
